fixed arraylist AutoCrystal info, Removed deprecated api from InventoryUtility